--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
 FACEBOOK_URL=http://localhost
+
+MOB_APP_LINK=mypetapp://
+MOB_APP_LINK_RESET_PASSWORD=recovery/changepassword
