--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/passport": "^7.2",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
+        "yajra/laravel-datatables-oracle": "^9.0",
         "zircote/swagger-php": "3.*"
     },
     "require-dev": {
