--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
         "skycons": "^1.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.5.3",
+        "socket.io-client": "^2.2.0"
     }
 }
