--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/admin.js": "/js/admin.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/css/admin.css": "/css/admin.css",
-    "/js/helper.js": "/js/helper.js",
-    "/js/updates.js": "/js/updates.js"
+    "/css/admin.css": "/css/admin.css"
 }
