--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "darkaonline/l5-swagger": "5.8.*",
         "fideloper/proxy": "^4.0",
+        "grimzy/laravel-mysql-spatial": "^1.0",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
